Fixed test fail on consecutive reuse of dead taskrunner.

Every instance of ExternalProtocolHandlerTest will delete thread bundle
and invalidate static DefaultWebClientWorker's task runner.
To prevent reuse of invalidated taskranner we'll delete it, and next
instance of ExternalProtocolHandlerTest will create a brand new one.

Bug: 765733
Change-Id: I44e65da6e95720d28a7e9b4820c08a13bb5a7406