chrome/browser/shell_integration.cc
@@ -46,6 +46,11 @@ namespace {
 
 const struct AppModeInfo* gAppModeInfo = nullptr;
 
+// TODO(pmonette): The better way to make sure all instances of
+// DefaultWebClient share a SequencedTaskRunner is to make the worker a
+// singleton.
+scoped_refptr<base::SequencedTaskRunner>* g_task_runner = nullptr;
+
 }  // namespace
 
 bool CanSetAsDefaultBrowser() {
@@ -172,30 +177,32 @@ void DefaultWebClientWorker::OnCheckIsDefaultComplete(
 // DefaultWebClientWorker, private:
 
 // static
+void DefaultWebClientWorker::DeleteTaskRunnerForTest() {
+  DCHECK_CURRENTLY_ON(BrowserThread::UI);
+  delete g_task_runner;
+  g_task_runner = nullptr;
+}
+
+// static
 scoped_refptr<base::SequencedTaskRunner>
 DefaultWebClientWorker::GetTaskRunner() {
   DCHECK_CURRENTLY_ON(BrowserThread::UI);
 
-  // TODO(pmonette): The better way to make sure all instances of
-  // DefaultWebClient share a SequencedTaskRunner is to make the worker a
-  // singleton.
-  static scoped_refptr<base::SequencedTaskRunner>* task_runner = nullptr;
-
   constexpr base::TaskTraits traits = {base::MayBlock()};
 
-  if (!task_runner) {
+  if (!g_task_runner) {
 #if defined(OS_WIN)
     // Shell integration calls like shell_integration::GetDefaultBrowser require
     // the thread to have COM initialized.
-    task_runner = new scoped_refptr<base::SequencedTaskRunner>(
+    g_task_runner = new scoped_refptr<base::SequencedTaskRunner>(
         base::CreateCOMSTATaskRunnerWithTraits(traits));
 #else
-    task_runner = new scoped_refptr<base::SequencedTaskRunner>(
+    g_task_runner = new scoped_refptr<base::SequencedTaskRunner>(
         base::CreateSequencedTaskRunnerWithTraits(traits));
 #endif
   }
 
-  return *task_runner;
+  return *g_task_runner;
 }
 
 void DefaultWebClientWorker::CheckIsDefault(bool is_following_set_as_default) {
