chrome/browser/external_protocol/external_protocol_handler_unittest.cc
@@ -6,6 +6,7 @@
 
 #include "base/run_loop.h"
 #include "chrome/browser/prefs/browser_prefs.h"
+#include "chrome/browser/shell_integration.h"
 #include "chrome/common/pref_names.h"
 #include "chrome/test/base/testing_browser_process.h"
 #include "chrome/test/base/testing_profile.h"
@@ -124,6 +125,8 @@ class ExternalProtocolHandlerTest : public testing::Test {
     ExternalProtocolHandler::PermitLaunchUrl();
     TestingBrowserProcess::GetGlobal()->SetLocalState(nullptr);
     local_state_.reset();
+    // Task runner will be invalidated due thread bundle destruction.
+    shell_integration::DefaultWebClientWorker::DeleteTaskRunnerForTest();
   }
 
   enum class Action { PROMPT, LAUNCH, BLOCK };
@@ -191,36 +194,29 @@ TEST_F(ExternalProtocolHandlerTest, TestLaunchSchemeUnBlockedChromeUnknown) {
          shell_integration::UNKNOWN_DEFAULT, Action::LAUNCH);
 }
 
-// TODO(crbug.com/765733): Fix the test.
 TEST_F(ExternalProtocolHandlerTest,
-       DISABLED_TestLaunchSchemeUnBlockedChromeOtherModeDefault) {
+       TestLaunchSchemeUnBlockedChromeOtherModeDefault) {
   DoTest(ExternalProtocolHandler::DONT_BLOCK,
          shell_integration::OTHER_MODE_IS_DEFAULT, Action::LAUNCH);
 }
 
-TEST_F(ExternalProtocolHandlerTest,
-       DISABLED_TestLaunchSchemeUnknownChromeDefault) {
+TEST_F(ExternalProtocolHandlerTest, TestLaunchSchemeUnknownChromeDefault) {
   DoTest(ExternalProtocolHandler::UNKNOWN, shell_integration::IS_DEFAULT,
          Action::BLOCK);
 }
 
-// TODO(crbug.com/765733): Fix the test.
-TEST_F(ExternalProtocolHandlerTest,
-       DISABLED_TestLaunchSchemeUnknownChromeNotDefault) {
+TEST_F(ExternalProtocolHandlerTest, TestLaunchSchemeUnknownChromeNotDefault) {
   DoTest(ExternalProtocolHandler::UNKNOWN, shell_integration::NOT_DEFAULT,
          Action::PROMPT);
 }
 
-// TODO(crbug.com/765733): Fix the test.
-TEST_F(ExternalProtocolHandlerTest,
-       DISABLED_TestLaunchSchemeUnknownChromeUnknown) {
+TEST_F(ExternalProtocolHandlerTest, TestLaunchSchemeUnknownChromeUnknown) {
   DoTest(ExternalProtocolHandler::UNKNOWN, shell_integration::UNKNOWN_DEFAULT,
          Action::PROMPT);
 }
 
-// TODO(crbug.com/765733): Fix the test.
 TEST_F(ExternalProtocolHandlerTest,
-       DISABLED_TestLaunchSchemeUnknownChromeOtherModeDefault) {
+       TestLaunchSchemeUnknownChromeOtherModeDefault) {
   DoTest(ExternalProtocolHandler::UNKNOWN,
          shell_integration::OTHER_MODE_IS_DEFAULT, Action::PROMPT);
 }
